# ready-set-boole

./: .gitignore  Cargo.toml
src/: main.rs
src/ex00/: ex00.rs
src/ex01/: ex01.rs
src/ex02/: ex02.rs
src/ex03/: dot_graph.rs  ex03.rs  expr_generator.rs  node.rs
src/ex04/: dot_graph.rs  ex04.rs  expr_generator.rs  node.rs
src/ex05/: dot_graph.rs  ex05.rs  node.rs
src/ex06/: dot_graph.rs  ex06.rs  expr_generator.rs  node.rs  tree.rs
src/ex06/tree/: cnf.rs  node.rs  row.rs
src/ex06/tree/node/: binop.rs  literal.rs
src/ex07/: dot_graph.rs  ex07.rs  node.rs
src/ex08/: ex08.rs
src/ex09/: dot_graph.rs  ex09.rs  expr_generator.rs  node.rs
