[package]
name = "ready-set-boole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ex00"
path = "src/ex00/ex00.rs"

[[bin]]
name = "ex01"
path = "src/ex01/ex01.rs"

[[bin]]
name = "ex02"
path = "src/ex02/ex02.rs"

[[bin]]
name = "ex03"
path = "src/ex03/ex03.rs"

[[bin]]
name = "ex04"
path = "src/ex04/ex04.rs"

[[bin]]
name = "ex05"
path = "src/ex05/ex05.rs"

[dependencies]
